button fixed and card overflow fixed

--- a/style.css
+++ b/style.css
@@ -18,19 +18,19 @@ body{
 }
 
 .chat i{
+    /* display: relative; */
     font-size: 40px;
-    margin: 40px 40px;
-
+    margin: 40px 80px;
+    z-index: 100;
 }
 
 .heading{
-    /* margin-top: -90%; */
-    /* position: fixed; */
-    /* background-color: aqua; */
+    display: absolute;
+    /* display : contents; */
     width: 100%;
-    margin-top: 2%;
-    z-index: 30;
-    padding-left: 160px;
+    padding-top: 3%;
+    padding-left: 28%;
+    margin:auto;
 }
 
 .div{
@@ -110,6 +110,10 @@ body{
 }
 
 .cardBtn {
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 92%;
     height: 10%;
     margin: auto;
@@ -131,6 +135,7 @@ body{
     transform: scale(1.02);
     background: rgba(255, 255, 255, 0.2);
     cursor: pointer;
+    color:white;
 }
 .cardHead{
     font-size: 1.5rem;
@@ -151,23 +156,26 @@ body{
         flex-direction: column;
     }
     .ezgaming{
-        font-size: 2.5rem;
+        font-size: 3.5rem;
     }
     .card{
         margin: auto;
         width: 90vw;
-        height: 60vh;
+        height: 70vh;
         margin-top: 10vh;
     }
+    .top{
+        flex-direction: column;
+    }
     .heading{
-        padding-left: 0;
-        padding-top: 30px;
+        padding-left: 12%;
+        padding-top: 10%;
     }
     .div{
         margin-left: 2rem;
     }
     .chat i{
-        font-size: 30px;
-        padding-top: 5px;
+        font-size: 25px;
+        padding-left: 55%;
     }
   }
